# openclaw-wsl

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  start.sh
data/: .gitkeep
scripts/: install-wsl.sh  setup-python.sh
src/: main.py
src/agent/: __init__.py  core.py
src/channels/: __init__.py
src/channels/whatsapp/: index.js
src/config/: __init__.py  settings.py
src/models/: __init__.py  gemini_client.py  ollama_client.py  router.py
src/utils/: __init__.py  logger.py
tests/: test_agent.py
